@@ -1,5 +1,10 @@
 2008-06-30  Aurimas Juška  <aurisj@svn.gnome.org>
 
+	* app/widgets/gimpdatafactoryview.[ch]
+	* app/widgets/gimptagentry.[ch]: tag assignment GUI support.
+
+2008-06-30  Aurimas Juška  <aurisj@svn.gnome.org>
+
 	* app/core/gimptagcache.[ch]: properly save changed tags.
 
 2008-06-29  Aurimas Juška  <aurisj@svn.gnome.org>
